# poetry_artifact

./: .gitignore  Dockerfile_app  Dockerfile_worker  Dockerfile_worker_iterate  README.md  build_worker_comands  cloudbuild.yaml  cloudbuild_composer.yaml  pyproject.toml  requirements.txt
airflow/: airflow.cfg  airflow.db
airflow/dags/: dag_ml_life_cycle.py  dag_ml_life_cycle_kubernetes_operator.py  dag_ml_life_cycle_v2.py  tutorial_0.py
airflow/dags/lifecycle_ml_example/dags/: dag_ml_life_cycle_kubernetes_decorator_docker.py
airflow/logs/scheduler/: latest
lifecycle_ml_example/artifacts/: model.pkl
